@@ -260,6 +260,15 @@ public class ClassData extends CoverageDataContainer
 		return this.name.substring(0, lastDot);
 	}
 
+	/**
+	 * Return the name of the file containing this class.  If this
+	 * classes sourceFileName has not been set (for whatever reason)
+	 * then this method will attempt to infer the name of the source
+	 * file using the class name.
+	 *
+	 * @return The name of the source file, for example
+	 *         net/sourceforge/cobertura/coveragedata/ClassData.java
+	 */
 	public String getSourceFileName()
 	{
 		String baseName;
